--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   flutter_dotenv: ^5.0.2
   image_picker: ^1.2.0
   url_launcher: ^6.1.7
+  webview_flutter: ^4.10.0
+  crypto: ^3.0.3
+  webview_flutter_web: ^0.2.3+4
 
 dev_dependencies:
   flutter_test:
