--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,12 @@
 {
-    "name": "dashboard-flutter",
-    "version": 2,
-    "builds": [
-        {
-            "src": "build/web/**",
-            "use": "@vercel/static"
-        }
-    ],
+    "buildCommand": "flutter build web",
+    "outputDirectory": "build/web",
+    "framework": null,
+    "installCommand": "flutter pub get",
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/build/web/$1"
-        },
-        {
-            "src": "/",
-            "dest": "/build/web/index.html"
+            "dest": "/$1"
         }
-    ],
-    "outputDirectory": "build/web"
+    ]
 }
