--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,25 @@
 {
-    "buildCommand": "flutter build web",
-    "outputDirectory": "build/web",
-    "framework": null,
-    "installCommand": "flutter pub get",
-    "routes": [
+    "cleanUrls": true,
+    "trailingSlash": false,
+    "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "/$1"
+            "source": "/(.*)",
+            "destination": "/build/web/$1"
+        },
+        {
+            "source": "/",
+            "destination": "/build/web/index.html"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/build/web/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
         }
     ]
 }
