--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,32 @@
 {
     "rewrites": [
         {
+            "source": "/assets/(.*)",
+            "destination": "/build/web/assets/$1"
+        },
+        {
+            "source": "/canvaskit/(.*)",
+            "destination": "/build/web/canvaskit/$1"
+        },
+        {
+            "source": "/(.*\\.(js|css|html|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot))$",
+            "destination": "/build/web/$1"
+        },
+        {
             "source": "/(.*)",
             "destination": "/build/web/index.html"
         }
     ],
     "headers": [
+        {
+            "source": "/build/web/(.*\\.(js|css))$",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "text/javascript; charset=utf-8"
+                }
+            ]
+        },
         {
             "source": "/build/web/(.*)",
             "headers": [
